fixes header and footer to the top and bottom, deals with overflow

--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -1,6 +1,7 @@
-html {
+/*html {
   min-height: 100%;
-}
+}*/
+
 
 .instructions .container h1 {
     font-size: 24px;
@@ -80,18 +81,23 @@ html {
 
 #formNextButton {
     color: white;
-    font-size: 24px;
-    display: block;
-    margin: auto;
-    background-repeat: no-repeat;
-    display: inline-block;
-    vertical-align: middle;
-    fill: currentColor;
-    height: 24px;
+    font-size: 14px;
+    /*display: block;*/
+    /*margin: auto;*/
+    /*background-repeat: no-repeat;*/
+    /*display: inline-block;*/
+    /*vertical-align: middle;*/
+    /*fill: currentColor;*/
+    /*height: 24px;
     width: 24px;
     min-height: 24px;
-    min-width: 24px;
+    min-width: 24px;*/
+    display: inline-block;
+    /*line-height: 16px;*/
+    height: 14px;
+    vertical-align: middle;
 }
+
 
 #headerTitle {
   font-family: 'Lato', sans-serif;
@@ -114,7 +120,12 @@ html {
 *{
   padding: 0;
   margin:0;
+  /*overflow: hidden;*/
   font-family: 'Questrial', sans-serif;
+}
+
+body{
+  min-height: : 100%;
 }
 
 h1{
@@ -145,4 +156,17 @@ h1{
 .md-button{
   font-size: 12px;
   min-width: 100px;
+  text-align: center;
+}
+
+.form-button{
+  color: white !important;
+  font-weight: bold;
+  font-size: 16px;
+}
+
+.footer-button{
+  width: 100px !important;
+  margin: 0 !important;
+  padding: 0 !important;
 }
